; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/sn/extr_ioc3.c_write_ireg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/sn/extr_ioc3.c_write_ireg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ioc3_driver_data = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ioc3_driver_data*, i32, i32)* @write_ireg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_ireg(%struct.ioc3_driver_data* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.ioc3_driver_data*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store %struct.ioc3_driver_data* %0, %struct.ioc3_driver_data** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.ioc3_driver_data*, %struct.ioc3_driver_data** %4, align 8
  %9 = getelementptr inbounds %struct.ioc3_driver_data, %struct.ioc3_driver_data* %8, i32 0, i32 0
  %10 = load i64, i64* %7, align 8
  %11 = call i32 @spin_lock_irqsave(i32* %9, i64 %10)
  %12 = load i32, i32* %6, align 4
  switch i32 %12, label %27 [
    i32 128, label %13
    i32 129, label %20
  ]

13:                                               ; preds = %3
  %14 = load i32, i32* %5, align 4
  %15 = load %struct.ioc3_driver_data*, %struct.ioc3_driver_data** %4, align 8
  %16 = getelementptr inbounds %struct.ioc3_driver_data, %struct.ioc3_driver_data* %15, i32 0, i32 1
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 1
  %19 = call i32 @writel(i32 %14, i32* %18)
  br label %27

20:                                               ; preds = %3
  %21 = load i32, i32* %5, align 4
  %22 = load %struct.ioc3_driver_data*, %struct.ioc3_driver_data** %4, align 8
  %23 = getelementptr inbounds %struct.ioc3_driver_data, %struct.ioc3_driver_data* %22, i32 0, i32 1
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = call i32 @writel(i32 %21, i32* %25)
  br label %27

27:                                               ; preds = %3, %20, %13
  %28 = load %struct.ioc3_driver_data*, %struct.ioc3_driver_data** %4, align 8
  %29 = getelementptr inbounds %struct.ioc3_driver_data, %struct.ioc3_driver_data* %28, i32 0, i32 0
  %30 = load i64, i64* %7, align 8
  %31 = call i32 @spin_unlock_irqrestore(i32* %29, i64 %30)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @writel(i32, i32*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
